src/objects/LocationOccupant__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Location Occupants</relationshipLabel>
        <relationshipName>LocationOccupants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ActiveBackground__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Background</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(OR(AND(StartDate__c  &lt;=TODAY(),ISBLANK(EndDate__c)),
AND(StartDate__c  &lt;=TODAY(),TODAY()&lt;=  EndDate__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Occupants</relationshipLabel>
        <relationshipName>LocationOccupants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NumberofOccupiers__c</fullName>
        <label>Number of Occupiers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OccupancyType__c</fullName>
        <label>Occupancy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_on_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Location Occupant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LO-{00000000}</displayFormat>
        <label>Location Occupant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Occupants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NumberOfOccupierIsManadatoryForHHAccount</fullName>
        <active>true</active>
        <description>If Account Record Type is HH, then Number of Occupiers is required</description>
        <errorConditionFormula>AND(  Account__r.RecordType.Name = &apos;Household Account&apos; , ISBLANK(NumberofOccupiers__c) )</errorConditionFormula>
        <errorMessage>Number of Occupiers is mandatory for Household Accounts.</errorMessage>
    </validationRules>
</CustomObject>